--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=5432
 
-DATABASE_URL=postgres://wallet_user:root@localhost:5432/wallet_db
+DATABASE_URL=postgresql://wallet_db_nacq_user:BctlugnmBygT2F2oRzkHhbbjEMp6IbjX@dpg-ctduhtbtq21c73fuetog-a.oregon-postgres.render.com/wallet_db_nacq
 SECRET_KEY=your-secret-key
 DEBUG=True
 
