--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: mysite
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m daphne wallet_system.asgi:application"    envVars:
+    startCommand: "python -m daphne wallet_system.asgi:application --bind 0.0.0.0 --port 8000"    envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: mysitedb
