--- a/.env
+++ b/.env
@@ -1,17 +1,9 @@
-SECRET_KEY=your_production_secret_key
-DEBUG=False
-ALLOWED_HOSTS=localhost
+SECRET_KEY=your-secret-key
+DEBUG=True
+ALLOWED_HOSTS=localhost, 0.0.0.0
 DB_NAME=wallet_db
 DB_USER=postgres
 DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=5432
-
-DATABASE_URL=postgresql://wallet_db_nacq_user:BctlugnmBygT2F2oRzkHhbbjEMp6IbjX@dpg-ctduhtbtq21c73fuetog-a.oregon-postgres.render.com/wallet_db_nacq
-SECRET_KEY=your-secret-key
-DEBUG=True
-
-
-# Optional Email settings
-SENDGRID_USERNAME=your_sendgrid_username
-SENDGRID_PASSWORD=your_sendgrid_password
+DATABASE_URL=postgresql://wallet_db:root@localhost:5432/wallet_db
